[Issue #443] add add-opens into manifest. (#444)